k8s-do/graphdb/graphdb-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: graphdb
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - triplestore.netwerkdigitaalerfgoed.nl
      secretName: graphdb-tls
  rules:
    # GraphDB doesn't support running under a path (/graphdb) so must run on a (sub)domain.
    - host: triplestore.netwerkdigitaalerfgoed.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: graphdb
                port:
                  number: 80
